# macro-into

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: foo.rs
src/: lib.rs  temp.rs
